# lvgl_esp-idf_projects

EvoWatch/: CMakeLists.txt  README.md  partitions_singleapp.csv  sdkconfig  sdkconfig.old
EvoWatch/main/: CMakeLists.txt  GUI.c  GUI.h  Kconfig.projbuild  RTC.h  Sensors.h  Weather.h  i2c_init.h  index.h  main.c  script.h
EvoWatch/main/components/: lv_conf.h  lv_ex_conf.h
EvoWatch/main/components/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c
EvoWatch/main/components/lv_examples/src/lv_ex_widgets/lv_ex_arc/: index.rst
EvoWatch/main/components/lvgl/scripts/release/: com.py  main.py  proj.py  release.py
EvoWatch/main/components/lvgl/src/lv_core/: lv_obj.c
EvoWatch/main/components/lvgl/src/lv_misc/: lv_anim.c  lv_anim.h
EvoWatch/main/components/lvgl/src/lv_widgets/: lv_label.c
EvoWatch/main/components/lvgl_esp32_drivers/: lvgl_helpers.c
EvoWatch/main/components/lvgl_esp32_drivers/lvgl_touch/: touch_driver.c
